# animikiikode

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: language-spec.md  memory-model.md  type-system.md
docs/examples/: async_operations.aki  expression_check.aki  file_operations.aki  fizzbuzz.aki  hello_world.aki  memory_ownership.aki  type_system.aki
src/: main.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/stdlib/: mod.rs
