[package]
name = "animikiikode"
version = "0.2.0"
edition = "2021"
authors = ["Jake \"PIXL\" Evans <jake@valink.io>"]
description = "An interpreted programming language with static typing and dynamic capabilities"

[[bin]]
name = "aki"
path = "src/main.rs"

[dependencies]
nom = "7.1.3"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
